Exampled the stereochemistry analysis section of the N-state model chapter of the manual.

--- a/docs/latex/infrastruct.tex
+++ b/docs/latex/infrastruct.tex
@@ -41,7 +41,7 @@ Previous announcements can be viewed at \href{https://mail.gna.org/public/relax-
 
 
 % relax-users mailing list.
-\subsection{relax-users}
+\subsection{relax-users} \label{sect: relax-users mailing list}
 
 If you would like to ask questions about relax, discuss certain features, receive help, or to communicate on any other subject related to relax the mailing list ``relax-users at gna.org''\index{mailing list!relax-users} is the place to post your message.
 To subscribe to the list go to the relax-users information page at \href{https://mail.gna.org/listinfo/relax-users/}{https://mail.gna.org/listinfo/relax-users/}.
