--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -514,6 +514,108 @@ http://svn.gna.org/svn/relax/tags/3.3.0
 
 
 
+    Changes (R1_fitting branch):
+        * Added list of R1rho models, which use R1 in their equations.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.  bug #21788(https://gna.org/bugs/?21788): Only Warning is raised for missing loading R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Modified the warning and error messages beeing raised when calling return_r1_data().  Now warnings is raised if no R1 data is available. An error is raised if the R1rho model is expected to have R1 data, and it is not available.  That makes systemtest: Relax_disp.test_r1rho_kjaergaard_missing_r1() fail, which is the expected behaviour.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.  bug #21788(https://gna.org/bugs/?21788): Only Warning is raised for missing loading R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added the model "MODEL_DPL94_FIT_R1", to the full list of models.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * In systemtest Relax_disp.test_r1rho_kjaergaard_missing_r1(), started using the new model MODEL_DPL94_FIT_R1.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added "r1_fit" as a parameter object.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added functionality to return r1_fit parameter in loop_parameters() function.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added model variable MODEL_DPL94_FIT_R1, to relax_disp target function.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Split the target function of model DPL94 into a func_DPL94 and calc_DPL94.  This is to prepare for a target function func_DPL94_fit_r1.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added initial target function for model DPL94_fit_r1.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added list of R1rho models, which can fit R1 in their equations.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Modified return_r1_data() function, to return numpy array of "None", if model is in list of "MODEL_LIST_R1RHO_FIT_R1".  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Modified target function func_DPL94_fit_r1(), to unpack fitted parameters correct.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added linear linear_constraints for paramter "r1_fit".  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added warning message when using function return_r1_data(), and model is in list MODEL_LIST_R1RHO_FIT_R1.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added model DPL94_FIT_R1 to the list of MODEL_LIST_R1RHO and MODEL_LIST_R1RHO_FULL.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Modified return_r1_data(), to be dependent on fitting model.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Made function return_r1_err_data() be dependent on model type.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Replaced instances of "['r2', 'r2a', 'r2b']" with variablÃe PARAMS_R20.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Implemendted model list, which uses paramter of inverted relax delay times.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Implemendted model list, which uses parameter of R20B.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix in target function for relax_disp, where model IT99 does not belong to model list with several chemical shift correlated parameters.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added new variable, for models which has parameters with mixed dw, and has two variables. For example with both dw and dwH or dw_AB and dw_BC or phi_ex_B and phi_ex_C.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added model  MODEL_NS_R1RHO_3SITE, MODEL_NS_R1RHO_3SITE_LINEAR, to list of models who has who dw parameters.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added new variable, for models which has parameters with mixed dw, and has four variables  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added to relax_disp auto_analyses, that R1_fit should be plotted and written out.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added 2 new models, MODEL_NOREX_R1RHO and MODEL_NOREX_R1RHO_FIT_R1.  The "NOREX" model is not covering R1rho models.  The target function for "NOREX" is calculated as: back_calc = R20  R20 is for R1hro models equivalent to R1rho prime (R1rho'), which for example in the model of DPL94 would mean: R1rho = R1rho'  But for the "NOREX" case, the return should be R1rho = R1 * cos^2(theta) + (R1rho' + 0) * sin^2(theta)  This affects all off-resonance model calculations.  These two target functions will be implemented.  bug #22440(https://gna.org/bugs/?22440): The "NOREX" model is not covering R1rho models.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Made the model MODEL_NOREX_R1RHO_FIT_R1, be tested in systemtest Relax_disp.test_r1rho_kjaergaard_missing_r1().  bug #22440(https://gna.org/bugs/?22440): The "NOREX" model is not covering R1rho models.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added models MODEL_NOREX_R1RHO and  MODEL_NOREX_R1RHO_FIT_R1 to MODEL_LIST_FULL.  bug #22440(https://gna.org/bugs/?22440): The "NOREX" model is not covering R1rho models.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Implemented target and calculation function for MODEL_NOREX_R1RHO, MODEL_NOREX_R1RHO_FIT_R1.  bug #22440(https://gna.org/bugs/?22440): The "NOREX" model is not covering R1rho models.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Made the model "MODEL_NOREX_R1RHO", be testes in systemtest Relax_disp.test_r1rho_kjaergaard_auto.  This is for systemtest where R1 has been loaded from earlier results, which was not analysed in relax.  bug #22440(https://gna.org/bugs/?22440): The "NOREX" model is not covering R1rho models.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Made list of models which fit pA or pA and pB.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added function to auto_analysis, to test if it give meaning to write and plot out the parameter.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Made the writing out of parameter pC, be tested with the new function.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Implemeted models list with phi_ex, phi_ex_B, and phi_ex_C, and added to test in auto_analyses of relax_disp.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Made use of the dictionary MODEL_PARAMS, to determine if parameter is present.  This makes the list of models belonging to parameter lists superflous.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Removed un-necessary list of models which support a parameter.  This functionality already exists with the dictionary MODEL_PARAMS.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Re-arranged the writing out of parameters in auto_analysis of relax_disp.  This is to prevent writing out all possible  parameters in the final round, if any of those parameters have not been tested.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Extended the writing and checking of parameters, to use different file name, than the parameter name.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Moved the auto analyses writing out of w_eff and theta into check for has_r1rho_exp_type()-  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Re-arranged all model variable lists, to be able to re-use earlier lists.  This is to prevent user errors, when setting up the lists, and re-use the lists through all code.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix for MODEL_NOREX_R1RHO_FIT_R1 not being part of list:  MODEL_LIST_DISP.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Moved the auto_analyses plot of special R1rho graphs into the check of has_r1rho_exp_type().  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Moved the auto analyses plotting and writing of r2, r2a and r2b for CPMG models into test of has_cpmg_exp_type().  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Replaced in auto analysis all instances of 'No Rex' and 'R2eff' with its equivalent defined variables.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Re-arranged plotting and writing in auto analyses of relax disp, when model is R2eff.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Removed unused variables in auto analyses of relax_disp.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Implemented the list "MODEL_LIST_NEST", which define which model are used for nesting.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix for the nested copying of r2, if using a nested list.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added the equivalend R1 fit models for: TP02, TAP03, MP05 and NS_R1RHO_2SITE.  The R1 fit modeÃls will no be implemented for 3 site models, because there will be to many variables.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added the new R1 fit models to systemtest Relax_disp.test_r1rho_kjaergaard_missing_r1().  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Split target function of model TP02, into a calc and two func_TP02* variants.  One target function will use measured R1 values, while one target function will use the fitted R1 values.  They will use the same calculation function.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix for error checking covering R1rho off resonance models in target function.  This is for checking presence of chemical shifts and r1.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Split target function of model TAP03, into a calc and two func_TAP03* variants.  One target function will use measured R1 values, while one target function will use the fitted R1 values.  They will use the same calculation function.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Split target function of model MP05, into a calc and two func_MP05* variants.  One target function will use measured R1 values, while one target function will use the fitted R1 values.  They will use the same calculation function.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix for systemtest Relax_disp.test_r1rho_kjaergaard_auto_check_graphs(), where the special R1rho graphs is no longer produced for the R2eff models.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Split target function of model ns_r1rho_2site, into a calc and two func_ns_r1rho_2site* variants.  One target function will use measured R1 values, while one target function will use the fitted R1 values.  They will use the same calculation function.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Removed num_points to be used in target and lib function of model ns_r1rho_2site.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added a variable describing the model year, for aæll relaxation dispersion models.  This could be used, when trying to write up an intelligent detect+seÃlect nesting function.  This function need some meta-data describing the models, in order to sort the seflf.models before calculations, and to select a proper nested model pipe.  Other meta data could be: - Accept of Exp_type - Full or normal model for CPMG - Fitted or loaded R1 for R1rho - Is analytic, silico or numeric type.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added initial unit test class for testing specific_analysis.relax_disp.variables.  There will be more tests added, when a nesting slection function has been written here.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added dictionary for returning year, when using model as key.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added unit test for the dictionary of model years.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Reused the EXP_TYPE_LIST_CPMG and EXP_TYPE_LIST_R1RHO, to combine for the list EXP_TYPE_LIST, the list of all dispersion experiment types.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added a commen EXP_TYPE_CPMG MMQ description for models which handle MMQ.  This is part of adding meta data for each model, making it possible to device a sensible nesting selection function.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added meta data about EXP_TYPE per model, and made a dictionary for it.  Added unit test for the new dictionary.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added three new EXP_TYPE variables.  EXP_TYPE_R2EFF = 'R2eff/R1rho' EXP_TYPE_NOREX = 'No Rex' EXP_TYPE_NOREX_R1RHO = 'No Rex: R1rho off res'  These are used to add meta-data information to each model, making it possible to make a nesting function, determining which model to nest from.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added model meta information about number of chemical exchange sites.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added meta information about equation type.  The models are dividided into: analytic, silico or numeric.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Implemented nesting function, which will determine which model to nest from.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * In auto analysis of relax_disp, started implementing the new nesting function.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Modified nesting function to return all model info for the current model, and the comparable model.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix for nesting kex, when model is CR72, and analysed models is LM63.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix for nesting kex, when model is CR72, and analysed models is IT99.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added a retur from the nesting model, if all fails.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Replaced the test, if acquiring the model info to a numerical model from a analytical model.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Improved the printing when nesting parameters from equivalent models.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Removed unused import of models in auto analyses of relax_disp.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Improved the printing of systemtest Relax_disp.test_r1rho_kjaergaard_missing_r1.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Improved the printing of systemtest Relax_disp.test_r1rho_kjaergaard_missing_r1.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added function to sort models before auto analyses.  They are sorted in order:  exp_type: EXP_TYPE_R2EFF, EXP_TYPE_NOREX, EXP_TYPE_NOREX_R1RHO, EXP_TYPE_CPMG_SQ, EXP_TYPE_CPMG_MMQ, EXP_TYPE_R1RHO equation: EQ_SILICO, EQ_ANALYTIC, EQ_NUMERIC Nr of chemical sites: 2 or 3 Year: Newest models first.  Nr of params:  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added unit test, to test the expected sorting of models for auto analyses.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added more models to be tested in sytemtest Relax_disp.test_r1rho_kjaergaard_auto.  bug #22461(https://gna.org/bugs/index.php?22461): NS R1rho 2-site_fit_r1 has extremely high chi2 value in systemtest Relax_disp.test_r1rho_kjaergaard_missing_r1.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Implemented the sorting of models, for auto analyses.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Implemented partial reading of results file.  Before reading a results file, it is determined if the file exists.  This makes is possible to read a directory with partial results from a previous analysis.  This can be handsome, if reading R2eff values in R1rho experiments, and the error estimation has been prepared with a high number of Monte-Carlo simulations.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added keyword to relax_disp auto analysis, if R2eff values should be optimised.  Here optimisation means minimisation and Monte Carlo simulations of the error.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Modified systemtest Relax_disp.test_r1rho_kjaergaard_missing_r1 to load previous R2eff values, and not optimise them.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Implemented the copying of the R2eff error, if it exists.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix in back end for relax_disp.parameter_copy, where r2a and r2b should be skipped, since it has already been copied.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Locked values in systemtest Relax_disp.test_r1rho_kjaergaard_missing_r1.  This is possible after locking the R2eff values and errors from a previous run.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Removed MODEL_NS_CPMG_2SITE_EXPANDED to be analysed in systemtest test_hansen_cpmg_data_missing_auto_analysis.  The new ordering of models, will make MODEL_NS_CPMG_2SITE_EXPANDED be analysed first, and results copied to model CR72.  This will interfere with the old results.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Lowered the precision of dw for model NS CPMG 2-site expanded, in systemtest est_hansen_cpmg_data_auto_analysis_numeric.  model NS CPMG 2-site expanded is now analysed before MODEL_CR72, which alter the values a bit.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added GUI text for parameter r1_fit.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added front-end description of the 6 new R1 fit R1rho models for relax_disp.select_model.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added a paragraph for the no chemical exchange model in help text description for selecting models.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added the new R1rho models where R1 is fitted, to the GUI model selection.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Deleted systemtest test_r1rho_kjaergaard_man, since it was no necessary.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Deleted un-used script files in data folder for Kjaergaard_et_al_2013.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix for the linear constraints where parameter r1_fit was written as R1_fit.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Fix for the numbers of parameters not getting counted correct.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Triggering an error in test_r1rho_kjaergaard_missing_r1.  There is a bug fetching the standard value of parameter 'r1_fit'.  AttributeError: 'float' object has no attribute 'keys'  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Removed un-used scripts in folder of Kjaergaard et al., 2013.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
+        * Added new analysis scripts in folder of Kjaergaard et al., 2013.  sr #3135(https://gna.org/support/?3135): Optimisation of the R1 relaxation rate for the off-resonance R1rho relaxation dispersion models.
 
 
 
